dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/fail/writeafterread_addition.spvasm
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 22
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpName %A "A"
               OpName %entry "entry"
               OpName %A_addr "A.addr"
               OpName %v "v"
               OpName %arrayidx "arrayidx"
               OpName %add "add"
               OpName %arrayidx1 "arrayidx1"
               OpDecorate %A_addr Alignment 4
               OpDecorate %v Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_1 = OpConstant %uint 1
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%_ptr_Function_uint = OpTypePointer Function %uint
          %6 = OpFunction %void DontInline %5
          %A = OpFunctionParameter %_ptr_Workgroup_uint
      %entry = OpLabel
     %A_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
          %v = OpVariable %_ptr_Function_uint Function
               OpStore %A_addr %A Aligned 4
         %13 = OpLoad %_ptr_Workgroup_uint %A_addr Aligned 4
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %13 %uint_0
         %16 = OpLoad %uint %arrayidx Aligned 4
               OpStore %v %16 Aligned 4
         %17 = OpLoad %uint %v Aligned 4
        %add = OpIAdd %uint %17 %uint_1
         %20 = OpLoad %_ptr_Workgroup_uint %A_addr Aligned 4
  %arrayidx1 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %20 %uint_0
               OpStore %arrayidx1 %add Aligned 4
               OpReturn
               OpFunctionEnd
